# A3Guard

./: .gitignore  A3Guard.desktop  CMakeLists.txt  CONTRIBUTING.md  FINAL_STATUS.txt  GIT_COMMIT_SUMMARY.md  LICENSE  PROJECT_READY.md  PUSH_TO_GITHUB.md  README.md  README_DETAILED.md  RELEASE.md  TRIGGER_RELEASE_WORKFLOW.md  UPDATE_CHECKER_DESIGN.md  UPDATE_FEATURE_QUICK_GUIDE.md  UPDATE_SYSTEM_EXPLAINED.md  UPDATE_SYSTEM_IMPLEMENTATION.md  VERSION_AND_RELEASE_SYSTEM.md  WARP.md  WORKFLOW_SETUP.md  a3guard-launcher  setup-github.sh
.github/: WORKFLOWS.md
.github/workflows/: build-deb.yml  ci.yml  release.yml
config/: a3guard.conf
docs/: index.html
include/: AlertManager.h  Common.h  ConfigManager.h  KeyLogger.h  Logger.h  MainWindow.h  MonitoringEngine.h  NetworkManager.h  PrivilegeDialog.h  ResourceMonitor.h  SecurityManager.h  SessionManager.h  SystemController.h  UpdateChecker.h  UpdateCheckerDialog.h
resources/: a3guard.qrc
scripts/: install.sh  update-version.sh
src/: AlertManager.cpp  ConfigManager.cpp  KeyLogger.cpp  Logger.cpp  MainWindow.cpp  MonitoringEngine.cpp  NetworkManager.cpp  PrivilegeDialog.cpp  ResourceMonitor.cpp  SecurityManager.cpp  SessionManager.cpp  SystemController.cpp  UpdateChecker.cpp  a3guard-update-checker.cpp  main.cpp
